# pptx_generator

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
assets/: README.md  logo.pptx
config/: AGENTS.md  branding.json  content_ai_policies.json  layout_ai_policies.json  polisher-rules.json  return_reasons.json  rules.json  template_ai_policies.json  usage_tags.json
docs/: AGENTS.md  README.md  design.md
samples/: AGENTS.md  sample_spec.json  sample_spec_minimal.json
scripts/: AGENTS.md  __init__.py  auto_complete_todo.py  branding_extract.py  lint_todo_completion.py  sync_issues_to_todo.py  sync_todo_to_issues.py  test_layout_providers.sh  test_template_ai.sh  test_template_extraction.sh  verify_cli_outputs.py
src/: AGENTS.md
templates/: README.md
tests/: AGENTS.md  conftest.py  test_analyzer.py  test_api_content.py  test_auto_complete_todo.py  test_branding_extractor.py  test_brief_llm_client.py  test_cli_cheatsheet_flow.py  test_cli_content.py  test_cli_integration.py  test_cli_logging.py  test_cli_outline.py  test_cli_prepare.py  test_content_approval_step.py  test_content_import.py  test_draft_api.py  test_draft_intel.py  test_draft_store.py  test_draft_structuring_step.py  test_generate_ready_utils.py  test_layout_providers_script.py  test_layout_recommender.py  test_layout_validation_suite.py  test_layout_validation_template_ai.py  test_layout_validation_usage_tags.py  test_lint_todo_completion.py  test_mapping_step.py  test_models.py  test_monitoring_step.py  test_refiner.py  (+17 more)
(+467 files in other folders)
